<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:id="@+id/activity_forgot_password"
    android:background="@color/background_tela"
    tools:context=".views.ForgotPassword">

    <ImageView
        android:id="@+id/icon"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo_pecbr"
        android:scaleType="centerCrop"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <TextView
        android:id="@+id/forgot_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/text_reset_password"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/colorPrimaryDark"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/forgot_email"
        android:hint="@string/email"
        android:layout_below="@+id/forgot_message"
        android:inputType="textEmailAddress"
        app:met_floatingLabel="normal"
        android:textCursorDrawable="@drawable/text_cursor_cyan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_floatingLabelTextSize="10sp"
        android:layout_marginBottom="5dp" />

    <Button
        android:id="@+id/forgot_btn_reset"
        android:layout_below="@+id/forgot_email"
        android:text="@string/enviar"
        android:background="#C09E56"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/forgot_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_btn_reset"
        android:layout_centerHorizontal="true"
        android:text="@string/voltar"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/colorPrimaryDark"/>

</RelativeLayout>