<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginActivity"
    android:id="@+id/activity_main"
    android:background="@color/background_tela"
    android:padding="16dp">

    <ImageView
        android:id="@+id/icon"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo_pecbr"
        android:scaleType="centerCrop"
        android:layout_width="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:layout_height="100dp" />

    <View
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_mxlarge"
        android:layout_below="@+id/icon"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/login_email"
        android:layout_below="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        app:met_floatingLabel="normal"
        app:met_floatingLabelTextSize="10sp"
        android:textCursorDrawable="@drawable/text_cursor_cyan"
        android:hint="@string/email" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/login_password"
        android:inputType="textPassword"
        android:layout_below="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:met_floatingLabel="normal"
        android:cursorVisible="true"
        app:met_floatingLabelTextSize="10sp"
        android:textCursorDrawable="@drawable/text_cursor_cyan"
        android:hint="@string/senha" />

    <Button
        android:id="@+id/login_btn_login"
        android:layout_below="@+id/login_password"
        android:text="@string/login"
        android:background="#C09E56"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/login_btn_forgot_password"
        android:layout_below="@+id/login_btn_login"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:focusable="true"
        android:textStyle="bold"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/login_layout_or"
        android:layout_below="@+id/login_btn_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="#c4c8c9"
            android:layout_margin="5dp" />

        <TextView
            android:padding="5dp"
            android:text="@string/ou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="#c4c8c9"
            android:layout_margin="5dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/login_btn_signup"
        android:layout_below="@+id/login_layout_or"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:focusable="true"
        android:textStyle="bold"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ProgressBar

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:id="@+id/progressBar"
        android:layout_below="@+id/login_btn_signup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:visibility="gone"/>

</RelativeLayout>